# ai-disclaimer

./: .ai-disclaimer.json  README.md  pyproject.toml
ai_disclaimer/: __init__.py  cli.py  presets.py  prompts.py
examples/: ai_disclaimer.html  ai_disclaimer.md
src/ai_disclaimer/: __init__.py  cli.py  config.py  render.py
