[project]
name = "ai-disclaimer"
version = "0.1.0"
description = "Interactive CLI tool for generating AI usage disclaimers"
license = { text = "MIT" }
authors = [
    { name = "j23n", email = "oss@j23n.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0",
]

[project.urls]
Repository = "https://app.radicle.xyz/nodes/rosa.radicle.xyz/rad:z4Wbrb12czWb8eKWxmKhqobJixnxe"

[project.scripts]
ai-disclaimer = "ai_disclaimer:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11"]
build-backend = "uv_build"
